--- a/ProiectPOO/ProiectPOO.vcxproj
+++ b/ProiectPOO/ProiectPOO.vcxproj
@@ -128,6 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Pix.cpp" />
+    <ClCompile Include="Practice.cpp" />
+    <ClCompile Include="practice2.cpp" />
     <ClCompile Include="Tema1POO.cpp" />
     <ClCompile Include="Test01.cpp" />
   </ItemGroup>
