--- a/ProiectPOO/ProiectPOO.vcxproj.filters
+++ b/ProiectPOO/ProiectPOO.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="Pix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Practice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="practice2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
