--- a/ProiectPOO/ProiectPOO.vcxproj.filters
+++ b/ProiectPOO/ProiectPOO.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="practice2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Practice3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
